#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
name = "prebindgen-ext"
version = "1.9.0"
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
description = "Prebindgen JNI extensions for Zenoh."
repository = "https://github.com/eclipse-zenoh/zenoh"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
prebindgen = "0.4.1"
itertools = "0.12"
jni = "0.21.1"
